# Async-vs-Thread-Scraping

./: LICENSE  README.md  async_scraper.py  benchmark.sh  benchmark_result.txt  pyproject.toml  server_api.py  sync_scraper.py  thread_scraper.py
config/: scraper_config.py
scraper/: async_scraper.py  sync_scraper.py  thread_scraper.py
utils/: result_images.py
